--- a/Web.Statu/Views/Home/KapacitaKazdeNemocnice_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaKazdeNemocnice_child.cshtml
@@ -95,7 +95,7 @@ else
 <div class="row">
 <div class="col-xs-12">
     <ul>    
-        <li><a href="kapacitanemocnic">Aktuální kapacity pro celé kraje</a></li>
+        <li><a href="/kapacitanemocnic">Aktuální kapacity pro celé kraje</a></li>
     </ul>
 </div>
             <div class="col-xs-12">Seznam nemocnic po krajích:</div>
@@ -122,8 +122,8 @@ else
     <div class="col-xs-12">
         <hr />
             <ul>    
-            <li><a href="kapacitanemocnic">Aktuální kapacity pro celé kraje</a></li>
-            <li><a href="kapacitanemocnic#nemocnice">Tabulka aktuálních kapacit jednotlivých nemocnic</a></li>
+            <li><a href="/kapacitanemocnic">Aktuální kapacity pro celé kraje</a></li>
+            <li><a href="/kapacitanemocnic#nemocnice">Tabulka aktuálních kapacit jednotlivých nemocnic</a></li>
         </ul>
     </div>
 </div>
