--- a/Web.Statu/Views/Manage/Index.cshtml
+++ b/Web.Statu/Views/Manage/Index.cshtml
@@ -195,7 +195,7 @@
                         <hr style="width:100px" />
                         @*/SocialBanner?title=OSTRAVA+AIRPORT+MULTIMODAL+PARK+s.r.o.&body=%E2%97%8F+V+roce+%3Cb%3E2018%3C%2Fb%3E+uzav%C5%99ela+firma+4+smlouvy+v%26nbsp%3Bregistru+smluv+za+%3Cb%3E%3Cspan+title%3D%22+++20+115+524+K%C4%8D%22%3E20%26nbsp%3Bmil.%26nbsp%3BK%C4%8D%3C%2Fspan%3E%3C%2Fb%3E.%3Cbr%2F%3E%E2%97%8F+Mezi+lety+%3Cb%3E2017-18%3C%2Fb%3E+do%C5%A1lo+k+%3Cb%3Epoklesu+zak%C3%A1zek+o%26nbsp%3B-87%2C92+%25%3C%2Fb%3E+v%26nbsp%3BK%C4%8D+.%3Cbr%2F%3E%E2%97%8F+V+%3Cb%3E2018+utajila%3C%2Fb%3E+hodnotu+kontraktu+u%26nbsp%3Bjedn%C3%A9+smlouvy%2C+co%C5%BE+je+celkem+%3Cb%3E25%2C00+%25%3C%2Fb%3E+ze+v%C5%A1ech.%3Cbr%2F%3E%E2%97%8F+Od+roku+%3Cb%3E2016%3C%2Fb%3E+uzav%C5%99ela+firma+celkem+7+smluv+v%26nbsp%3Bregistru+smluv+za+%3Cb%3E%3Cspan+title%3D%22+++186+595+262+K%C4%8D%22%3E187%26nbsp%3Bmil.%26nbsp%3BK%C4%8D%3C%2Fspan%3E%3C%2Fb%3E.&footer=Soukrom%C3%A1+firma%2C+%C3%BAdaje+k+1.+1.+2019*@
                         <form id="customQuoteForm" action="/socialbanner/quote" method="get" class="form-horizontal" onsubmit="updateImg(); return false;">
-
+                            <input type="hidden" name="refresh" value="1">
                             <div class="form-group-sm">
                                 <label for="jmeno" class="col-xs-2 control-label">Titulek (nepovinne)</label>
                                 <div class="col-xs-10">
