Cached right box

--- a/Web.Statu/Views/Home/Subjekt2.cshtml
+++ b/Web.Statu/Views/Home/Subjekt2.cshtml
@@ -58,66 +58,9 @@
 
 <div class="row boxes">
     @* Pravý sloupec *@
-    <div class="col-sm-4 col-sm-push-8 col-xs-12 col-xs-push-0">
-        <div class="row">
-            <div class="col-sm-4">
-                <div class="person-profile-thumb">
-                    <div class="photo">
-                        <div class="profile-picture" style="background-image: url('https://www.hlidacstatu.cz/Photo/alena-schillerova')"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-8">
-                <p class="py-0 my-0 text-muted">Aktuální ministr</p>
-                <p class="py-0 my-0 lead">JUDr. Alena Schillerová, Ph.D</p>
-                <p class="py-0 my-0">od 13. 12. 2017</p>
-            </div>
-        </div>
-        <hr />
-        <div>
-            <table>
-                <tr>
-                    <td class="text-nowrap text-muted col-sm-5">Založeno</td>
-                    <td class="col-sm-7">@(Model.Datum_Zapisu_OR.Value.ToString("dd.MM.yyyy"))</td>
-                </tr>
-                <tr>
-                    <td class="text-nowrap text-muted col-sm-5">IČO</td>
-                    <td class="col-sm-7">@Model.ICO</td>
-                </tr>
-                <tr>
-                    <td class="text-nowrap text-muted col-sm-5">Datová schránka</td>
-                    <td class="col-sm-5">@string.Join(", ", Model.DatovaSchranka)</td>
-                </tr>
-            </table>
-        </div>
-        <hr />
-        <div class="watcher">
-            <h4>Chci hlídat</h4>
-            <div>
-                @WebUtil.AddWatchDog(this.User, "ico:" + Model.ICO, null,
-                                     "Všechny změny o " + Devmasters.TextUtil.ShortenText(Model.Jmeno, 30),
-                                     prefillWDname: "Novinky pro " + Model.Jmeno, btnCss: "btn btn-warning btn-xs", showWDList: false, preBtnText: "")
-            </div>
-            <div>
-                @if (Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Count() > 0)
-                {
-                    @WebUtil.AddWatchDog(this.User, "holding:" + Model.ICO, null,
-                                     $"Změny i "
-                                     + Devmasters.Lang.Plural.Get(Model.AktualniVazby(HlidacStatu.Lib.Data.Relation.AktualnostType.Nedavny).Count(), "v jedné dceřinné společnosti", "ve {0} dceřinných společnostech", "v {0} dceřinných společnostech")
-                                     + "", prefillWDname: "Novinky pro " + Model.Jmeno, btnCss: "btn btn-warning btn-xs", showWDList: false, preBtnText: "")
-                }
-            </div>
-        </div>
-        <hr />
-        <div>
-            <span class="text-muted">Chci sdílet s ostatními</span>
-            <div>
-                @WebUtil.ShareFacebook(Model.GetUrl(false))
-                @WebUtil.ShareTwitter(Model.GetUrl(false), $"{Model.Jmeno} na @HlidacStatu - {Model.InfoFacts().First().Render(false)}")
-                @WebUtil.ShareWidget(Model.GetUrl(false))
-            </div>
-        </div>
-    </div>
+    @Html.CachedAction(HtmlExtensions.CachedActionLength.Cache12H, "Subjekt2_RightColumn", Model, Model.ICO,
+        this.User.Identity.IsAuthenticated)
+
     @* Prázdný sloupec *@
     <div class="col-sm-1">
     </div>
