--- a/Web.Statu/Views/Home/Subjekt2_dotace.cshtml
+++ b/Web.Statu/Views/Home/Subjekt2_dotace.cshtml
@@ -8,66 +8,143 @@
 @using System.Data;
 @using HlidacStatu.Lib.Render;
 
-@{ 
-    Layout = null;
+
+@section breadcrumb
+{
+    <ol class="breadcrumb">
+        <li><a href="/">Hlídač Státu</a></li>
+        <li>Úřady a firmy</li>
+        <li class="active">@ViewBag.Title</li>
+    </ol>
 }
 
+@section scripts
+{
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+    @Scripts.Render("~/bundles/highcharts")
+    <script src="/scripts/highcharts-6/highcharts-more.js"></script>
+    <script src="/scripts/highcharts-6/modules/heatmap.js"></script>
+    <script src="/scripts/highcharts-6/modules/treemap.js"></script>
 
-<div>
-    <h4>Dotace graf</h4>
+}
 
-    @{
-        var dotaceService = new HlidacStatu.Lib.Data.Dotace.DotaceService();
-        var subsidies = dotaceService.GetDotaceForIco(Model.ICO);
+<style>
+    .my-0 {
+        margin-top: 0px;
+        margin-bottom: 0px;
     }
 
-    @* Přidat sem sloupcový graf souhrnů dotací za jednotlivé roky  *@
+    .py-0 {
+        padding-top: 0px;
+        padding-bottom: 0px;
+    }
 
-    @{
-        ReportDataSource reportData = new ReportDataSource(new ReportDataSource.Column[]
-        {
+    .boxes h4 {
+        font-size: 24px;
+        font-weight: bold;
+    }
 
-            new ReportDataSource.Column()
-            {
-                Name = "Rok"
-            },
-            new ReportDataSource.Column()
-            {
-                Name = "Celkový objem dotace"
-            },
-        });
+    .head h3 {
+        font-size: 40px;
+        font-weight: bold;
+    }
 
-        List<(int Rok, decimal Castka)> subsidiesYearly = new List<(int Rok, decimal Castka)>();
-        foreach(var subsidy in subsidies)
-        {
-            IEnumerable<(int Rok, decimal Castka)> cerpani = subsidy.Rozhodnuti
-                .SelectMany(r => r.Cerpani, (roz, cer) =>
-                (
-                    cer?.Rok ?? roz.Rok ?? subsidy.DatumPodpisu?.Year ?? 0,
-                    cer?.CastkaSpotrebovana ?? 0
-                )
-            ).ToArray();
+    p {
+        font-size: 16px;
+    }
 
-            subsidiesYearly.AddRange(cerpani);
-        }
+    .watcher .btn {
+        background-color: rgb(231,102,5);
+        padding: 7px 15px;
+        margin: 5px 0px;
+        text-transform: none;
+        font-size: 14px;
+    }
+</style>
 
-        var data = subsidiesYearly
-            .GroupBy(s => s.Rok)
-            .Select(g => new ReportDataTimeValue()
-            {
-                Date = new DateTime(g.Key, 1, 1),
-                Value = g.Sum(x => x.Castka)
+<div class="head">
+    <h3>@Html.KIndexLabelLink(Model.ICO, 30, linkToKindex: true)@Model.Jmeno</h3>
+    <p>Úřad - orgán veřejné moci. Řídí <a>45 podřízených organizací.</a> Je součástí <a>14 kategorií orgánu veřejné moci.</a></p>
+</div>
+<hr />
+
+<div class="row boxes">
+    @* Pravý sloupec *@
+    @Html.CachedAction(HtmlExtensions.CachedActionLength.Cache12H, "Subjekt2_RightColumn", Model, Model.ICO,
+        this.User.Identity.IsAuthenticated)
+
+    @* Prázdný sloupec *@
+    <div class="col-sm-1">
+    </div>
+    @* První sloupec *@
+    <div class="col-sm-7 col-sm-pull-5 col-xs-12 col-xs-pull-0">
+        <div>
+            <h4>Dotace graf</h4>
+
+            @{
+                var dotaceService = new HlidacStatu.Lib.Data.Dotace.DotaceService();
+                var subsidies = dotaceService.GetDotaceForIco(Model.ICO);
+            }
+
+            @* Přidat sem sloupcový graf souhrnů dotací za jednotlivé roky  *@
+
+            @{
+                ReportDataSource reportData = new ReportDataSource(new ReportDataSource.Column[]
+                {
+
+                new ReportDataSource.Column()
+                {
+                    Name = "Rok"
+                },
+                new ReportDataSource.Column()
+                {
+                    Name = "Celkový objem dotace"
+                },
             });
 
+                List<(int Rok, decimal Castka)> subsidiesYearly = new List<(int Rok, decimal Castka)>();
+                foreach (var subsidy in subsidies)
+                {
+                    foreach (var rozhodnuti in subsidy.Rozhodnuti)
+                    {
+                        //todo: předělat rozhodnutí/čerpání, aby vraceli empty array, pokud jsou prázdné
+                        if (rozhodnuti.Cerpani is null || rozhodnuti.Cerpani.Count == 0)
+                        {
+                            continue;
+                        }
 
-        @UtilChart.SimpleColumnChart(
-           new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] { (name: "Dotace po letech", values: data) },
-        "Přehled inkasovaných dotací", "Přehled dotací", 500);
+                        foreach (var cerpani in rozhodnuti.Cerpani)
+                        {
+                            subsidiesYearly.Add(
+                                (
+                                cerpani.Rok ?? rozhodnuti.Rok ?? subsidy.DatumPodpisu?.Year ?? 0,
+                                cerpani.CastkaSpotrebovana ?? 0
+                                ));
+                        }
+                    }
 
-        }
+                }
+
+                var data = subsidiesYearly
+                    .GroupBy(s => s.Rok)
+                    .Select(g => new ReportDataTimeValue()
+                    {
+                        Date = new DateTime(g.Key, 1, 1),
+                        Value = g.Sum(x => x.Castka)
+                    });
+
+
+                @UtilChart.SimpleColumnChart(
+                   new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] { (name: "Dotace po letech", values: data) },
+                "Přehled inkasovaných dotací", "Přehled dotací", 500);
+
+            }
 
 
 
-    <a class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
+            <a class="text-uppercase"><strong>Zobrazit podrobnosti</strong></a>
+        </div>
+
+    </div>
 </div>
-
