--- a/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
+++ b/Web.Statu/Views/Home/KapacitaNemocnic_child.cshtml
@@ -37,6 +37,20 @@
     <p>
         Data ÚZIS, která Ministerstvo zdravotnictví tajila nejen před veřejností, ale po zveřejnění dat naším serverem a následným veřejným tlakem od 1.10.2020 zveřejňuje 1x denně.
     </p>
+    <p><span style="color:red">Důležité upozornění:</span>
+        Od 19. října se ptáme poskytovatele dat ÚZIS a prof. MUDr. Vladimíra Černého Ph.D. na tyto otázky. 
+    <ul>
+        <li>Zveřejňovaná kapacita nemocnic je poměrně stabilní, přestože počet hospitalizovaných narůstá o stovky denně a pacientů na JIP/ARO o desítky denně. Je vykazovaní volnych kapacit lůžek v pořádku?
+        </li>
+        <li>Nemocnice neaktualizují informace o dostupných počtech lékařů JIP/ARO. Proč a kdy se to přestalo reportovat</li>
+    </ul>
+    Přes opakované urgence jsme
+    <b style="color:red">za @((DateTime.Now.Date-new DateTime(2020,10,19)).TotalDays.ToString("N0")) dní</b> nedostali odpověď ani vysvětlení. 
+    Po první neurčité odpovědi s námi prof. Černý odmítl dále komunikovat.
+    </p>
+    <p><b>Z tohoto důvodu jsme se rozhodli zveřejňovat i stále utajovaná data o aktuálně hospitalizovaných pacientech v jednotlivých krajích a v jednotlivých nemocnicích.
+    Počet aktuálně hospitalizovaných jasně ukazuje prudce rostoucí zátěž nemocnic
+    </b></p>
 </div>
 
         <div class="bs-callout bs-callout-primary small">
@@ -222,9 +236,10 @@ tbl_nem_o = $('#nem_o').DataTable({
 
 @helper RenderH(NemocniceData.Region h, NemocniceData.Region diffH, NemocniceData first, IEnumerable<NemocniceData> timedata)
 {
-var chartdata = timedata.Select(m => new  
-{ 
-    date = m.lastUpdated,data = m.regions.First(hh=>hh.region == h.region) 
+var chartdata = timedata.Select(m => new
+{
+    date = m.lastUpdated,
+    data = m.regions.First(hh => hh.region == h.region)
 });
 
 
@@ -235,7 +250,7 @@ var chartdata = timedata.Select(m => new
     <div class="col-xs-12 col-sm-6 singlebox">
         <h4>Lůžka (ARO+JIP dospělí)</h4>
         <p>
-            Celkem @h.AROJIP_luzka_celkem, volných @(h.AROJIP_luzka_covid+h.AROJIP_luzka_necovid) (@HlidacStatu.Util.RenderData.NicePercent(h.AROJIP_perc()))
+            Celkem @h.AROJIP_luzka_celkem, volných @(h.AROJIP_luzka_covid + h.AROJIP_luzka_necovid) (@HlidacStatu.Util.RenderData.NicePercent(h.AROJIP_perc()))
             <br />
             Volná lůžka: COVID <span style="font-size:125%;font-weight:bold">@h.AROJIP_luzka_covid</span> / neCOVID <span style="font-size:125%">@h.AROJIP_luzka_necovid</span>
             <br />
@@ -243,17 +258,17 @@ var chartdata = timedata.Select(m => new
         </p>
         <p>
             @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
-                    (name:"ARO+JIP volná neCOVID lůžka", 
+                    (name:"ARO+JIP volná neCOVID lůžka",
                         values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.AROJIP_luzka_necovid } )
                     ),
-                    (name:"ARO+JIP volná COVID lůžka", 
+                    (name:"ARO+JIP volná COVID lůžka",
                         values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.AROJIP_luzka_covid } )
                     ),
-                    (name:"ARO+JIP COVID lůžka celkem", 
+                    (name:"ARO+JIP COVID lůžka celkem",
                         values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.AROJIP_luzka_celkem } )
                     )
                 },
-                "","počet",200, minY:0 )
+         "", "počet", 200, minY: 0)
         </p>
     </div>
     <div class="clearfix hidden-md hidden-lg"></div>
@@ -261,7 +276,7 @@ var chartdata = timedata.Select(m => new
     <div class="col-xs-12 col-sm-6 singlebox">
         <h4>Lůžka (standardní s kyslíkem)</h4>
         <p>
-            Celkem @h.Standard_luzka_s_kyslikem_celkem, volných @(h.Standard_luzka_s_kyslikem_covid+h.Standard_luzka_s_kyslikem_necovid) (@HlidacStatu.Util.RenderData.NicePercent(h.Standard_luzka_s_kyslikem_perc()))
+            Celkem @h.Standard_luzka_s_kyslikem_celkem, volných @(h.Standard_luzka_s_kyslikem_covid + h.Standard_luzka_s_kyslikem_necovid) (@HlidacStatu.Util.RenderData.NicePercent(h.Standard_luzka_s_kyslikem_perc()))
             <br />
             Volná lůžka: COVID <span style="font-size:125%;font-weight:bold">@h.Standard_luzka_s_kyslikem_covid</span> / neCOVID <span style="font-size:125%">@h.Standard_luzka_s_kyslikem_necovid</span>
             <br />
@@ -269,19 +284,77 @@ var chartdata = timedata.Select(m => new
         </p>
         <p>
             @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
-                    (name:"volná neCOVID lůžka s kyslíkem", 
+                    (name:"volná neCOVID lůžka s kyslíkem",
                         values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Standard_luzka_s_kyslikem_necovid} )
                     ),
-                    (name:"volná COVID lůžka s kyslíkem", 
+                    (name:"volná COVID lůžka s kyslíkem",
                         values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Standard_luzka_s_kyslikem_covid} )
                     ),
-                    (name:"COVID lůžka s kyslíkem celkem", 
+                    (name:"COVID lůžka s kyslíkem celkem",
                         values:chartdata.Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Standard_luzka_s_kyslikem_celkem} )
                     )                },
+         "", "počet", 200, minY: 0)
+        </p>
+    </div>
+    <div class="clearfix "></div>
+
+    <h3>@h.regionFull()</h3>
+
+
+     <div class="col-xs-12 col-sm-6 singlebox">
+        <h4>Počet aktuálně hospitalizovaných každý den <span class="exclusive">Nové</span></h4>
+        <p>
+            Počet <b>v daný konkrétní den</b> hospitalizovaných pacientů podle závažnosti stavu.
+        </p>
+        <p>
+            @{ 
+                var currDate = chartdata.Where(m => m.data.PacientiCelkem() > 0).Max(m => m.date);
+            }
+            Aktuální počet hospitalizovaných k <b>@(currDate.ToString("dd.MM.yyyy"))</b>: 
+            bez příznaků <b>@(chartdata.First(m=>m.date == currDate).data.Pacienti_bezpriznaku)</b>,
+            v lehkém stavu <b>@(chartdata.First(m=>m.date == currDate).data.Pacienti_lehky)</b>,
+            ve středně těžkém stavu <b>@(chartdata.First(m=>m.date == currDate).data.Pacienti_stredni)</b>,
+            v těžkém stavu <b>@(chartdata.First(m=>m.date == currDate).data.Pacienti_bezpriznaku)</b>.
+        </p>        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"Bezpříznakový",
+                        values:chartdata.Where(m=>m.data.Pacienti_bezpriznaku>0).Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Pacienti_bezpriznaku} )
+                    ),
+                    (name:"Lehký stav",
+                        values:chartdata.Where(m=>m.data.Pacienti_lehky>0).Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Pacienti_lehky} )
+                    ),
+                    (name:"Středně těžký stav",
+                        values:chartdata.Where(m=>m.data.Pacienti_stredni>0).Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Pacienti_stredni} )
+                    ),
+                    (name:"Těžký stav",
+                        values:chartdata.Where(m=>m.data.Pacienti_tezky>0).Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Pacienti_tezky } )
+                    )
+                },
+         "", "počet", 200, minY: 0)
+        </p>
+    </div>
+    <div class="clearfix hidden-md hidden-lg"></div>
+
+    <div class="col-xs-12 col-sm-6 singlebox">
+        <h4>Počet zemřelých během hospitalizace daný den <span class="exclusive">Nové</span></h4>
+        <p>
+            Počet hospitalizovaných pacientů, kteří <b>v daný konkrétní den</b> během hospitalizace zemřeli.
+        </p>
+        <p>&nbsp;<br/>&nbsp;</p>
+        <p>
+            @UtilChart.SimpleLineChart(new (string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)[] {
+                    (name:"volná neCOVID lůžka s kyslíkem", 
+                        values:chartdata.Where(m=>m.data.Pacienti_zemreli>0).Select(m=>new HlidacStatu.Lib.Render.ReportDataTimeValue(){ Date = m.date, Value = m.data.Pacienti_zemreli} )
+                    )
+                },
                 "","počet",200, minY:0 )
         </p>
     </div>
     <div class="clearfix "></div>
+
+
+        <h3>@h.regionFull()</h3>
+
 
     <div class="col-xs-12 col-sm-6 singlebox">
         <h4>Přístroje ECMO <small>podpora nejvaznejsich pripadu, plicni rizeni</small></h4>
@@ -327,6 +400,8 @@ var chartdata = timedata.Select(m => new
     </div>
 
         <div class="clearfix"></div>
+
+        <h3>@h.regionFull()</h3>
 
     <div class="col-xs-12 col-sm-6 singlebox">
         <h4>Přístroje CRRT <small>kontinuální dialýza</small></h4>
