--- a/Web.Statu/App_Code/UtilChart.cshtml
+++ b/Web.Statu/App_Code/UtilChart.cshtml
@@ -90,6 +90,82 @@ Highcharts.chart('@containerId', {
 }
 
 
+@helper SimpleStackedChart(IEnumerable<(string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)> data,
+    string title, string valueName,
+    int height, string addStyle ="", int? minY=null, bool showMarker = true, string chartType = "column")
+{
+string containerId = "chart_" + Guid.NewGuid().ToString("N");
+List<string> sdata = new List<string>();
+foreach (var d in data)
+{
+
+    sdata.Add(
+        $"{{ name : '{d.name}', data :["
+        + d.values
+            .Select(m => $"[Date.UTC({m.Date.Year},{m.Date.Month - 1},{m.Date.Day},{m.Date.Hour},{m.Date.Minute}),{m.Value.ToString(HlidacStatu.Util.Consts.enCulture)}]")
+            .Aggregate((f, s) => f + "," + s)
+        + $"]}}"
+    );
+}
+
+    <div id="@containerId" style="height:@(height)px;@addStyle"></div>
+    <script>
+Highcharts.chart('@containerId', {
+    chart: {
+        plotBackgroundColor: null,
+        plotBorderWidth: 0,
+        plotShadow: false,
+        type: '@chartType'
+    },
+ title: {
+        text: '@title'
+    },
+
+    yAxis: {
+        title: {
+            text: 'Počet'
+        }
+        @if (minY.HasValue)
+        { 
+            <text>
+            , min: @(minY.Value)
+            </text>
+        }
+    },
+        tooltip: {
+        xDateFormat: '%d. %m. %Y %H:%M',
+        shared: true
+    },
+    plotOptions: {
+        series: {
+            stacking: 'normal'
+            @if (showMarker)
+            {
+            <text>
+                    ,marker: {
+                            radius: 4,
+                            enabled: true
+                            }
+            </text>
+            }
+            }
+        },
+xAxis: {
+    type: 'datetime',
+        tickInterval: 24 * 3600 * 1000
+    },
+
+    legend: {
+    enabled:false
+    },
+    series: [
+        @Html.Raw(string.Join(",",sdata))
+    ]
+});</script>
+
+}
+
+
 
 @helper SimpleLineChart(IEnumerable<(string name, IEnumerable<HlidacStatu.Lib.Render.ReportDataTimeValue> values)> data,
     string title, string valueName,
