--- a/Web.Statu/Views/Home/KapacitaKazdeNemocnice.cshtml
+++ b/Web.Statu/Views/Home/KapacitaKazdeNemocnice.cshtml
@@ -23,6 +23,8 @@
     <script src="/scripts/highcharts-6/highcharts.js"></script>
     <script src="/scripts/highcharts-6/modules/heatmap.js"></script>
     <script src="/scripts/highcharts-6/modules/data.js"></script>
+    <script src="/Scripts/highcharts.global.options.js"></script>
+
    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
     <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
       <style>
